2017-02-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	(load):

	If the given file is not found, try to add the '.gz' extension.  This is
	consistent with ARTS.

	(load_indexed):

	Added a convenience function to load indexed XML files. All files matching
	a given filename pattern are loaded and the results are retunred in a list.

	* typhon/arts/griddedfield.py:

	Added attribute `dataname` to all GriddedField classes. It is now possible
	to set a proper name for the stored data array.

	If `dataname` is not set, no name is written to XML files. This replaces
	the old behavior of adding 'Data' as default.

2017-02-10  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData):

	Add support for version 3. Version 2 data is automatically upgraded to
	version 3 for non-azimuthally random particles.

2017-02-08  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	All functions that export colormaps to files are now using the number of
	colors actually defined in the colormap as default.

	Changed the keyword argument in `mpl_colors()` from `n` to `N` for
	consistency.`

2017-02-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/em.py:

	Added `radiance2planckTb()` and `radianc2rayleighjeansTb()` to convert
	radiances to brightness temperatures.

	* typhon/physics/tests/test_physics.py:

	Implemented tests for new functions.

2017-02-02  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(DatasetDeque.reset):

	- Reset either to start of time or to new time.

2017-01-30  Gerrit Holl  <g.holl@reading.ac.uk>

	* setup.py:

	- Add support for Python 3.6 in addition to Python 3.5
	- Add dependency on xarray (≥ 0.8, apparently the version in conda)

	* typhon/datasets/_tovs_defs.py:

	- Uncomment scale_factor 1, was causing ints to become floats upon
	unpacking
	- Rename dimension “scanline” to “time” for more consistent processing

	* typhon/datasets/tovs.py:
